update readme to use G3 icon, not folder icon

--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -5,7 +5,7 @@
 <title>Wheels of Prophecy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link href="doc/files/g3readme.css" type="text/css" rel="stylesheet" />
-<link href="doc/files/g3.ico" type="image/bmp" rel="icon" />
+<link href="doc/files/g3icon.ico" type="image/bmp" rel="icon" />
 </head>
 <body>
 <h1>The Wheels of Prophecy</h1>
