--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -12,7 +12,7 @@
 <div class="section">
   <p><strong><a href="http://www.gibberlings3.net/">A Gibberlings Three Mod</a> <br />
     Author: DavidW</strong></p>
-  <p><strong> Version 3</strong></p>
+  <p><strong> Version 4</strong></p>
 </div>
 <h2>Overview</h2>
 <div class="section">
@@ -124,6 +124,11 @@ V1 First public release (July 2008)
 <li>Moved the attack on the village outside the monastery.
 <li>New combat script for the friendly version of Balthazar.
 <li>Install order with SCS is now enforced (WoP will refuse to install if SCS is installed.)
+</ul>
+<p>V4 (February 2016)</p>
+<ul>
+<li>Added French translation courtesy of Mornagest (of the d'Oghmatiques)
+<li>Included sox for improved OS X compatibility
 </ul>
 
 </div>
