--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -130,6 +130,11 @@ V1 First public release (July 2008)
 <li>Added French translation courtesy of Mornagest (of the d'Oghmatiques)
 <li>Included sox for improved OS X compatibility
 </ul>
+<p>V5 (May 2016)</p>
+<ul>
+<li>Added EET compatibility courtesy of K4thos
+<li>Fixed invalid abilities offset in dw#melri.itm that would prevent other mods from patching the file successfully
+</ul>
 
 </div>
 </body>
