--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -12,7 +12,7 @@
 <div class="section">
   <p><strong><a href="http://www.gibberlings3.net/">A Gibberlings Three Mod</a> <br />
     Author: DavidW</strong></p>
-  <p><strong> Version 4</strong></p>
+  <p><strong> Version 6</strong></p>
 </div>
 <h2>Overview</h2>
 <div class="section">
@@ -127,13 +127,19 @@ V1 First public release (July 2008)
 </ul>
 <p>V4 (February 2016)</p>
 <ul>
-<li>Added French translation courtesy of Mornagest (of the d'Oghmatiques)
+<li>Added French translation, courtesy of Mornagest (of the d'Oghmatiques)
 <li>Included sox for improved OS X compatibility
 </ul>
 <p>V5 (May 2016)</p>
 <ul>
-<li>Added EET compatibility courtesy of K4thos
+<li>Added EET compatibility, courtesy of K4thos
 <li>Fixed invalid abilities offset in dw#melri.itm that would prevent other mods from patching the file successfully
+</ul>
+<p>V6 (August 2016)</p>
+<ul>
+<li>Updated EET compatibility, courtesy of K4thos
+<li>Added fixes to handle file changes in EE v2
+<li>Improved robustness when encountering missing files, courtesy of CrevsDaak
 </ul>
 
 </div>
