--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -32,7 +32,7 @@
 Author: </strong><a href="http://gibberlings3.net/forums/index.php?showuser=1067">DavidW</a><strong><br />
       
 On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a> and <a href="http://gibberlings3.net/forums/index.php?showforum=156">discussion      forum</a></p>
-      <p><strong> Version 7</strong><br />
+      <p><strong> Version 8</strong><br />
         <strong> Languages:</strong> English, French<br />
         <strong>Platforms: </strong>Windows,  Mac OS X, Linux<br />
       <strong>GitHub: </strong><a href="https://github.com/Gibberlings3/WheelsOfProphecy">Gibberlings3/WheelsOfProphecy</a></p>
@@ -189,17 +189,22 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
   <li>Added EET compatibility, courtesy of K4thos </li>
   <li>Fixed invalid abilities offset in dw#melri.itm that would prevent other mods from patching the file successfully </li>
 </ul>
-<p><strong>V6 (August 2016</strong>)</p>
+<p><strong>V6 (August 2016)</strong></p>
 <ul>
   <li>Updated EET compatibility, courtesy of K4thos </li>
   <li>Added fixes to handle file changes in EE v2 </li>
   <li>Improved robustness when encountering missing files, courtesy of CrevsDaak </li>
 </ul>
-<p><strong>V7 (September 2018</strong>)</p>
+<p><strong>V7 (September 2018)</strong></p>
       <ul>
         <li>Fixed a bug that could prevent installations for French players</li>
         <li>Fixed a bug where a dialogue option with the Solar was failing to set a variable</li>
         <li>Fixed a pair of bugs dealing with the village attacked</li>
+      </ul>
+<p><strong>V8 (April 2019)</strong></p>
+      <ul>
+        <li>Ad-hoc fix to a dialog-mismatch for Balthazar in Enhanced Edition installs</li>
+        <li>Under-the-hood changes: updated SFO function library and external-directory nomenclature; immutablised charset and audio handling</li>
       </ul>
     </div>
   </div>
