Fix to allow installation on non-Ascension installs

--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -206,6 +206,8 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
         <li>Ad-hoc fix to a dialog-mismatch for Balthazar in Enhanced Edition installs</li>
         <li>Under-the-hood changes: updated SFO function library and external-directory nomenclature; immutablised charset and audio handling</li>
       </ul>
+<p>V8 incremental fixes:</p>
+<ul><li>v8.1: fix a bug preventing install on non-Ascension installs</li></ul>
     </div>
   </div>
 </div>
