Update readme notes for 8.2

--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -207,7 +207,10 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
         <li>Under-the-hood changes: updated SFO function library and external-directory nomenclature; immutablised charset and audio handling</li>
       </ul>
 <p>V8 incremental fixes:</p>
-<ul><li>v8.1: fix a bug preventing install on non-Ascension installs</li></ul>
+<ul>
+<li>v8.1: fix a bug preventing install on non-Ascension installs</li>
+<li>v8.2: allow for installation when Ascension 2.0 'Tougher Balthazar' isn't present</li>
+</ul>
     </div>
   </div>
 </div>
