correction to version number

--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -209,7 +209,8 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
 <p>V8 incremental fixes:</p>
 <ul>
 <li>v8.1: fix a bug preventing install on non-Ascension installs</li>
-<li>v8.2: allow for installation when Ascension 2.0 'Tougher Balthazar' isn't present</li>
+<li>v8.2: fix a nasty bug that was corrupting chapter-identifying variables and blocking late-stage play</li>
+<li>v8.3: allow for installation when Ascension 2.0 'Tougher Balthazar' isn't present</li>
 </ul>
     </div>
   </div>
