--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -211,7 +211,7 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
 <li>v8.1: fix a bug preventing install on non-Ascension installs</li>
 <li>v8.2: fix a nasty bug that was corrupting chapter-identifying variables and blocking late-stage play</li>
 <li>v8.3: allow for installation when Ascension 2.0 'Tougher Balthazar' isn't present</li>
-<li>v8.4: allow for installation with WeiDU 247, fixed a bug with exiting the pocket plane after Balthasar confrontation</li>
+<li>v8.4: (maintenance release made by Angel) allow for installation with WeiDU 247, fixed a bug with exiting the pocket plane after Balthasar confrontation, some minor polishing</li>
 </ul>
     </div>
   </div>
