--- a/wheels/readme-wheels.html
+++ b/wheels/readme-wheels.html
@@ -32,7 +32,7 @@
 Author: </strong><a href="http://gibberlings3.net/forums/index.php?showuser=1067">DavidW</a><strong><br />
       
 On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a> and <a href="http://gibberlings3.net/forums/index.php?showforum=156">discussion      forum</a></p>
-      <p><strong> Version 8</strong><br />
+      <p><strong> Version 8.5</strong><br />
         <strong> Languages:</strong> English, French<br />
         <strong>Platforms: </strong>Windows,  Mac OS X, Linux<br />
       <strong>GitHub: </strong><a href="https://github.com/Gibberlings3/WheelsOfProphecy">Gibberlings3/WheelsOfProphecy</a></p>
@@ -212,6 +212,7 @@ On the web: </strong><a href="http://www.gibberlings3.net/wheels/">Home page</a>
 <li>v8.2: fix a nasty bug that was corrupting chapter-identifying variables and blocking late-stage play</li>
 <li>v8.3: allow for installation when Ascension 2.0 'Tougher Balthazar' isn't present</li>
 <li>v8.4: (maintenance release made by Angel) allow for installation with WeiDU 247, fixed a bug with exiting the pocket plane after Balthasar confrontation, some minor polishing</li>
+<li>v8.5 Added Simplified Chinese translation, courtesy of angel_c4</li>
 </ul>
     </div>
   </div>
